# secure-file-sharing-app

./: .env  .gitignore  Cargo.toml  readme.md
migrations/: 20250908095636_users_table.sql  20250908095641_files_table.sql  20250908095645_shared_links_table.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  router.rs
src/handler/: auth.rs  file.rs  file_query.rs  mod.rs  user.rs
src/utils/: decrypt.rs  encrypt.rs  keys.rs  mod.rs  password.rs  token.rs
