[package]
name = "secure-share"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
block-modes = "0.9.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
rand = "0.8"
rsa = "0.9.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std-native-tls", "uuid", "chrono"] }
time = "0.3.43"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.14.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
